tests/derive/ui/de/fail/multiple_errors.stderr
error: unknown `#[irc]` attribute `invalid`
 --> tests/derive/ui/de/fail/multiple_errors.rs:5:11
  |
5 |     #[irc(invalid)]
  |           ^^^^^^^

error: unknown `#[irc]` attribute `invalid2`
 --> tests/derive/ui/de/fail/multiple_errors.rs:7:11
  |
7 |     #[irc(invalid2)]
  |           ^^^^^^^^
